--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node logic/main.js"
+    "start": "nodemon logic/main.js --exec babel-node"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,11 @@
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
     "ws": "^5.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "nodemon": "^1.17.3"
   }
 }
