--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.0",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "ws": "^5.1.1"
   },
   "devDependencies": {
